--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,7 +1,3 @@
-#
-# Stolen from AbnormalPoof's fork, didnt knew workflows existed lmao
-#
-
 # This is a basic workflow to help you get started with Actions
 
 name: COMPILE ON WINDOWS
@@ -33,6 +29,7 @@ jobs:
           haxelib install lime 7.9.0
           haxelib install openfl
           haxelib install flixel
+          haxelib git firetongue https://github.com/Metlmeta/firetongue.git
           haxelib run lime setup flixel
           haxelib run lime setup
           haxelib install flixel-tools
