--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -46,7 +46,7 @@ jobs:
           haxelib git faxe https://github.com/uhrobots/faxe
           haxelib git polymod https://github.com/MasterEric/polymod.git
           haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
-          haxelib git firetongue https://github.com/Metlmeta/firetongue.git
+          haxelib git firetongue https://github.com/larsiusprime/firetongue
           haxelib run lime build windows -debug
           
       - uses: actions/upload-artifact@v2
