--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -1,17 +1,53 @@
-name: Superlinter
-on: push
+#wonderhoyyyyyyyy
+
+
+
+
+
+
+# This is a basic workflow to help you get started with Actions
+
+name: COMPILE ON WEB asabsbbnbnfabndsdnbdfsnbsdfbndfsbndfsbndsbndsdsbndbns
+
+# Controls when the workflow will run
+on: [push, pull_request]
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  lint:
-    runs-on: ubuntu-latest
+ # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
+    runs-on: windows-latest
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-      - name: Setup Haxe
-        uses: krdlab/setup-haxe@v1
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - uses: krdlab/setup-haxe@v1
         with:
-          haxe-version: 4.1.5
-      - name: Lint Haxe
+          haxe-version: 4.2.5
+      # Runs a set of commands using the runners shell
+      - name: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
         run: |
-          haxelib install haxelint
-          haxelib run haxelint -s source 
-          haxelib run haxelint -s Preloader.hx
+          mkdir "%HAXELIB_ROOT%"
+          haxelib setup "%HAXELIB_ROOT%"
+          haxelib install lime 7.9.0
+          haxelib install openfl 9.0.2
+          haxelib install flixel 4.11.0
+          haxelib run lime setup flixel
+          haxelib run lime setup
+          haxelib install format
+          haxelib install hscript-ex
+          haxelib install newgrounds
+          haxelib install hxcs
+          haxelib install polymod
+          haxelib install flxanimate
+          haxelib git faxe https://github.com/uhrobots/faxe
+          haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
+          haxelib git firetongue https://github.com/larsiusprime/firetongue
+          haxelib list
+          haxelib run lime build html5 -debug
+          
+      - uses: actions/upload-artifact@v2
+        with:
+          name: yass slay
+          path: export/debug/html5/bin
