--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -37,7 +37,7 @@ jobs:
           haxelib run lime setup
           haxelib install format
           haxelib install hscript-ex
-          haxelib install newgrounds
+          haxelib install newgrounds 1.1.5
           haxelib install hxcs
           haxelib install polymod
           haxelib install flxanimate
